--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.3.1
   permission_handler: ^12.0.1
   image_picker: ^1.1.1
+  image: ^4.1.3
   camera: ^0.11.2
   device_info_plus: ^12.1.0
   flutter_localizations:
