--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,13 +7,8 @@
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     
     <!-- ========== 存储权限 (Android 12 及以下) ========== -->
-    <uses-permission 
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
-    <uses-permission 
-        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32"
-        tools:replace="android:maxSdkVersion" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission  android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
     <!-- ========== 照片权限 (Android 13+) ========== -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
@@ -23,7 +18,7 @@
     <!-- =========== 网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
+
     <application
         android:label="PlantsVision"
         android:name="${applicationName}"
