--- a/python/.env
+++ b/python/.env
@@ -29,6 +29,7 @@ AWS_REGION=us-east-1
 AWS_ENDPOINT_URL=https://s3.amazonaws.com
 
 # OpenAI (必须)
+OPENAI_API_KEY=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
 OPENAI_API_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-3.5-turbo  # 或 gpt-4-turbo-preview
 
